--- a/config.env
+++ b/config.env
@@ -1,2 +1,8 @@
 server_bind_ip=0.0.0.0
 server_port=8080
+
+db_host=localhost
+db_port=5432
+db_user=postgres
+db_password=example
+db_name=stats_db
